argocd/app-configs/vault/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "vault-0"
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  ports:
    - name: https
      port: 8200
      targetPort: 8200
      protocol: TCP
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    apps.kubernetes.io/pod-index: "0"
---
apiVersion: v1
kind: Service
metadata:
  name: "vault-1"
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  ports:
    - name: https
      port: 8200
      targetPort: 8200
      protocol: TCP
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    apps.kubernetes.io/pod-index: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: "vault-2"
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  ports:
    - name: https
      port: 8200
      targetPort: 8200
      protocol: TCP
  selector:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault
    apps.kubernetes.io/pod-index: "2"
